# cookiecutter-hypy

./: cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: docker-publish.yml  tests.yml
